Added content to web pages

--- a/about.html
+++ b/about.html
@@ -11,15 +11,14 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fullwidth">
       <div class="heading">
-        <h1>Manuel's Place</h1>
+        <h1>About</h1>
       </div>
-    </div>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-inverse" style="background-color: #4268f4;">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        ::before
         <ul class="navbar-nav">
-          <li class="active nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
@@ -28,17 +27,18 @@
           <li class="nav-item">
             <a class="nav-link" href="bucketlist.html">Bucket List</a>
           </li>
-          <li class="nav-item">
+          <li class="active nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
+        ::after
       </nav>
     </div>
-    <div class="container" id="content">
-        <p>
-          Looks like this is my spot on the internet. I haven't decided what to put up in my home page.
-          I do, however, have other pages you can check out while you're here.
-        </p>
+    <div class="container">
+      <div class="content">
+        <h2>About me</h2>
+        <p>Don't have anything for you at the moment. Come back later.</p>
+      </div>
     </div>
   </body>
 </html>
