--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Manuel's Place</title>
+    <title>Gallery</title>
     <!--Metadata tag-->
     <meta charset="utf-8">
     <!--Bootstrap CSS-->
@@ -11,18 +11,16 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fullwidth">
       <div class="heading">
         <h1>Manuel's Place</h1>
       </div>
-    </div>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-inverse" style="background-color: #4268f4;">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <ul class="navbar-nav">
-          <li class="active nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="active nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
@@ -34,11 +32,11 @@
         </ul>
       </nav>
     </div>
-    <div class="container" id="content">
-        <p>
-          Looks like this is my spot on the internet. I haven't decided what to put up in my home page.
-          I do, however, have other pages you can check out while you're here.
-        </p>
+    <div class="container">
+      <div class="content">
+        <h2>Gallery</h2>
+        <p>Don't have anything for you at the moment. Check back later.</p>
+      </div>
     </div>
   </body>
 </html>
