--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fullwidth">
       <div class="heading">
         <h1>Manuel's Place</h1>
       </div>
-    </div>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-inverse" style="background-color: #4268f4;">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <ul class="navbar-nav">
           <li class="active nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -34,11 +32,14 @@
         </ul>
       </nav>
     </div>
-    <div class="container" id="content">
+    <div class="container">
+      <div class="content">
         <p>
-          Looks like this is my spot on the internet. I haven't decided what to put up in my home page.
-          I do, however, have other pages you can check out while you're here.
+          Looks like this is my spot on GitHub Pages. I haven't decided what to put up
+          in my home page. Anyway, while you're here, why not have a look at my photo
+          gallery and my bucket list.
         </p>
+      </div>
     </div>
   </body>
 </html>
