Updated gallery page with images

--- a/hw1/gallery.html
+++ b/hw1/gallery.html
@@ -35,7 +35,32 @@
     <div class="container">
       <div class="content">
         <h2>Gallery</h2>
-        <p>Don't have anything for you at the moment. Check back later.</p>
+        <div class="container">
+          <div class="row">
+            <figure class="col-sm-6">
+              <img src="img/1.jpg">
+            </figure>
+            <figure class="col-sm-6">
+              <img src="img/2.jpg">
+            </figure>
+          </div>
+          <div class="row">
+            <figure class="col-sm-6">
+              <img src="img/3.jpg">
+            </figure>
+            <figure class="col-sm-6">
+              <img src="img/4.jpg">
+            </figure>
+          </div>
+          <div class="row">
+            <figure class="col-sm-6">
+              <img src="img/5.jpg">
+            </figure>
+            <figure class="col-sm-6">
+              <img src="img/6.jpg">
+            </figure>
+          </div>
+        </div>
       </div>
     </div>
   </body>
