--- a/hw1/gallery.html
+++ b/hw1/gallery.html
@@ -15,7 +15,7 @@
       <div class="heading">
         <h1>Manuel's Place</h1>
       </div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-left">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -38,26 +38,26 @@
         <div class="container">
           <div class="row">
             <figure class="col-sm-6">
-              <img src="img/1.jpg">
+              <img src="img/1.jpg" alt="coast 1">
             </figure>
             <figure class="col-sm-6">
-              <img src="img/2.jpg">
-            </figure>
-          </div>
-          <div class="row">
-            <figure class="col-sm-6">
-              <img src="img/3.jpg">
-            </figure>
-            <figure class="col-sm-6">
-              <img src="img/4.jpg">
+              <img src="img/2.jpg" alt="coast 2">
             </figure>
           </div>
           <div class="row">
             <figure class="col-sm-6">
-              <img src="img/5.jpg">
+              <img src="img/3.jpg" alt="coast 3">
             </figure>
             <figure class="col-sm-6">
-              <img src="img/6.jpg">
+              <img src="img/4.jpg" alt="coast 4">
+            </figure>
+          </div>
+          <div class="row">
+            <figure class="col-sm-6">
+              <img src="img/5.jpg" alt="coast 5">
+            </figure>
+            <figure class="col-sm-6">
+              <img src="img/6.jpg" alt="coast 6">
             </figure>
           </div>
         </div>
