--- a/hw1/index.html
+++ b/hw1/index.html
@@ -34,10 +34,12 @@
     </div>
     <div class="container">
       <div class="content">
+        <h2>Hey there!</h2>
         <p>
-          Looks like this is my spot on GitHub Pages. I haven't decided what to put up
-          in my home page. Anyway, while you're here, why not have a look at my photo
-          gallery and my bucket list.
+          Welcome to my website! Well, at least the directory where this is
+          hosted at. I haven't thought about what I'm going to put up in my home
+          page. While you're here, why not have a look around at my other web
+          pages, such as my photo gallery, my bucket list and my about page.
         </p>
       </div>
     </div>
