Added short description heading to my pages

--- a/hw1/bucketlist.html
+++ b/hw1/bucketlist.html
@@ -35,6 +35,11 @@
     <div class="container">
       <div class="content">
         <h2>Bucket list</h2>
+        <p>
+          Below is a list of things I've always wanted to do in my lifetime, some
+          of which might be fulfilled. But, hey, a guy can dream, right? This
+          is by no means exhaustive.
+        </p>
         <table>
           <tr>
             <th>Item</th>
