--- a/hw1/gallery.html
+++ b/hw1/gallery.html
@@ -35,6 +35,8 @@
     <div class="container">
       <div class="content">
         <h2>Gallery</h2>
+          <p>Below are photos of the Oregon Coast (probably somewhere between
+            Depoe Bay and Newport) I took back in the summer of 2015.
         <div class="container">
           <div class="row">
             <figure class="col-sm-6">
