--- a/hw1/about.html
+++ b/hw1/about.html
@@ -13,10 +13,9 @@
   <body>
     <div class="container-fullwidth">
       <div class="heading">
-        <h1>About</h1>
+        <h1>Manuel's Place</h1>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        ::before
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -31,13 +30,39 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
-        ::after
       </nav>
     </div>
     <div class="container">
       <div class="content">
         <h2>About me</h2>
-        <p>Don't have anything for you at the moment. Come back later.</p>
+        <p>
+          My name is Manuel Larios and I am a Senior-year Computer Science major at
+          <a href="http://www.wou.edu/">Western Oregon University</a>.
+        </p>
+        <p>
+          At this point, I'm not sure whether I want to go on to be a full-time
+          software developer or web developer. On one hand, I've always wanted
+          to develop applications for Android (and probably iOS). On the other hand,
+          I've always wanted to create a website with something more than just HTML,
+          CSS and JavaScript. I guess I'll find out where life takes me.
+        </p>
+        <h2>Some random facts...</h2>
+        <ol>
+          <li>I enjoy video games.</li>
+            <ul>
+              <li>Every now and then, I like to play retro games on the N64 and PS1 platforms</li>
+              <li>The only PC-based game I've played so far is Minecraft</li>
+            </ul>
+          <li>I enjoy watching sports, especially college football, NFL, Liga MX and UEFA Champions League.</li>
+            <ul>
+              <li>In college football, I root for Oregon (Not Oregon State).</li>
+              <li>In the NFL, Titans all the way!</li>
+              <li>In Liga MX: Pumas</li>
+              <li>UCL, I'm not sure. But I'm leaning towards either Barcelona or Bayern Munich.</li>
+            </ul>
+          <li>I enjoy eating both forms of ramen, store-bought and from scratch.</li>
+          <li>Chichen pot pie is probably the best American dish, IMO, next to the Big Mac.</li>
+        </ol>
       </div>
     </div>
   </body>
