--- a/hw1/bucketlist.html
+++ b/hw1/bucketlist.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <title>Bucket list</title>
-    <!--Metadata tag-->
+    <!--Metadata tags-->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <!--My CSS file-->
@@ -24,7 +25,7 @@
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="active nav-item">
-            <a class="nav-link" href="bucketlist.html">Bucket List</a>
+            <a class="nav-link" href="bucketlist.html">Bucket list</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -82,6 +83,16 @@
               and sound system that responds to either Alexa or Google.
             </td>
             <td>93%</td>
+          </tr>
+          <tr>
+            <td>Dine at a "Michelin star" restaurant</td>
+            <td>Preferably at an American or Asian restaurant. Don't care for the number of stars.</td>
+            <td>68%</td>
+          </tr>
+          <tr>
+            <td>Own a significant share of a successful company</td>
+            <td>I'm thinking of Microsoft, Comcast, 3M and the like.</td>
+            <td>14%</td>
           </tr>
         </table>
       </div>
