--- a/hw1/index.html
+++ b/hw1/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <title>Manuel's Place</title>
-    <!--Metadata tag-->
+    <!--Metadata tags-->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <!--My CSS file-->
@@ -24,7 +25,7 @@
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="bucketlist.html">Bucket List</a>
+            <a class="nav-link" href="bucketlist.html">Bucket list</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
