--- a/hw2/index.html
+++ b/hw2/index.html
@@ -34,29 +34,29 @@
         <div class="col-sm-4">
           <p>Step 1: Enter an amount</p>
           <label>$</label>
-          <input type="number" id="input-amt" min="0" value="0" placeholder="0.00" step="0.01">
+          <input type="number" id="input-amt" min="0"  placeholder="0" step="1">
         </div>
         <div class="col-sm-4">
           <p>Step 2: How do you want your change?</p>
           <!-- Change type checkboxes -->
-          <div class="row" id="change-cbox-group">
+          <div class="row">
             <div class="col-sm-12">
-              <input type="checkbox" name="hundred">
+              <input type="checkbox" name="hundred" checked>
               <label f>$100 bills</label>
               <br>
-              <input type="checkbox" name="fifty">
+              <input type="checkbox" name="fifty" checked>
               <label>$50 bills</label>
               <br>
-              <input type="checkbox" name="twenty">
+              <input type="checkbox" name="twenty" checked>
               <label>$20 bills</label>
               <br>
-              <input type="checkbox" name="ten">
+              <input type="checkbox" name="ten" checked>
               <label>$10 bills</label>
               <br>
-              <input type="checkbox" name="five">
+              <input type="checkbox" name="five" checked>
               <label>$5 bills</label>
               <br>
-              <input type="checkbox" name="one">
+              <input type="checkbox" name="one" checked>
               <label>$1 bills</label>
             </div>
           </div>
