--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Manuel's Place</title>
+  <title>Cash Change Dispenser</title>
   <!--Metadata tags-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +14,22 @@
 <body>
   <div class="container-fullwidth">
     <div class="heading">
-      <h1></h1>
+      <h1>Cash Change Dispenser</h1>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <ul class="navbar-nav">
         <li class="active nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Help</a>
-        </li>
       </ul>
     </nav>
   </div>
   <div class="container">
     <div class="content">
-      <h2></h2>
+      <h2>Cash Change Dispenser</h2>
+      <p>This program aims at simulating a cash change dispenser (similar to what you would find at an ATM
+        or at a self-checkout kiosk).
+      </p>
       <div class="row">
         <div class="col-sm-4">
           <p>Step 1: Enter an amount</p>
